# direct-care-api

./: .env  .gitignore  .pylintrc  Makefile  README.md  codepipeline.yaml  pyproject.toml  pytest.ini  requirements.txt  template.yaml  tox.ini
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml
.github/workflows/: auto-merge-dependabot.yml  codeql-analysis.yml  continuous-integration.yml  create-pr-aws-infra.yml  destroy-pr-aws-infra.yml  release.yml  terraform-aws-infra.yml
aws/cloudformation/: README.md  ci_pipeline.yaml  ci_pipeline_params_template.json  pipeline_resources.yaml
aws/codepipeline/: README.md  buildspec_build_package.yml  buildspec_deploy.yml  buildspec_feature.yml  buildspec_integration_test.yml
cloudformaiton/: dev_pipeline_resources.yaml  sam-app-pipeline.yaml
cloudformation/resources/: ci_pipeline.yaml  ci_pipeline_params_template.json  dev_pipeline_resources.yaml  dev_pipeline_resources_params.json  int_pipeline_resources.yaml  pipeline_resources_params.json
cloudformation/scripts/: deploy_pipeline.sh
lambdas/: shared
lambdas/add/: add_lambda.py
lambdas/add/add/: add.py  add_test.py
lambdas/add/app/: add_lambda.py  add_test.py
lambdas/main/: main_lambda.py  shared
lambdas/main/app/: main_lambda.py
lambdas/main/app/main/: main.py  main_test.py
lambdas/main/main/: main.py
lambdas/multiply/: multiply_lambda.py
lambdas/multiply/app/: multiply_lambda.py
lambdas/multiply/app/multiply/: multiply.py
lambdas/orchestration/: orchestration_handler.py
lambdas/orchestration/app/: orchestration_handler.py
lambdas/orchestration/app/lib/: absolute_file_path.py  extract_url_code.py  get_access_token.py  get_dict_value.py  get_fhir_error.py  get_logbase.py  get_ssm_param.py  logbase.cfg  make_get_request.py  make_request.py  pds_fhir.py  sds_fhir.py  ssp_html_request.py  ssp_request.py  ssp_structured_request.py  write_log.py
lambdas/orchestration/handler/: orchestration_handler.py
lambdas/orchestration/handler/lib/: logbase.cfg
lambdas/orchestration/lib/: absolute_file_path.py  get_access_token.py  get_ssm_param.py  pds_fhir.py  write_log.py
lambdas/orchestration/tests/: conftest.py  orchestration_lambda_test.py
lambdas/orchestration/tests/data/pds_responses/: nhs_number_1111111111.json  nhs_number_9449306613.json  nhs_number_9690937278.json  not_found_response.json
lambdas/orchestration/tests/data/sds_responses/: device_ods_code_A82021.json  device_ods_code_D82021.json  device_ods_code_P82021.json  device_ods_code_no_entry.json  device_ods_code_not_found.json  endpoint_party_key_B82617-822289.json
lambdas/orchestration/tests/data/ssp_responses/: ssp_html_response_9690937278.json  ssp_not_found_response.json  ssp_structured_response_9690937278.json
lambdas/orchestration/tests/integration/: orchestration_lambda_test.py
lambdas/orchestration/tests/unit/: extract_url_parts_test.py  write_log_test.py
lambdas/orchestration/tests/utils/: log_helper.py  mock_get_request.py  mock_post_request.py  mock_private_key.py  mock_ssm_client.py  test_utils.py
lambdas/pds/: pds_lambda.py  requirements.txt
lambdas/pds/app/: pds_lambda.py
lambdas/pds/app/pds/: pds.py
lambdas/pds/pds/: pds.py
lambdas/power/: power_lambda.py
lambdas/power/power/: power.py
lambdas/sds/: get_sds_data_test.py  sds_lambda.py
lambdas/sds/app/: client_test.py  get_sds_data_test.py  sds_lambda.py
lambdas/sds/app/sds/: sds.py
lambdas/sds/sds/: client_test.py  get_sds_data_test.py  sds.py
lambdas/shared/: requirements.txt
lambdas/shared/logger/: __init__.py  context.py  formatters.py  http.py  logger.py  logger_test.py
lambdas/shared/shared/: utils.py
lambdas/ssp/: ssp_lambda.py
lambdas/ssp/ssp/: ssp.py
pipeline/: buildspec_build_package.yml  buildspec_feature.yml  buildspec_integration_test.yml  buildspec_unit_test.yml
scripts/: assume_role.sh  aws_mfa_update.sh  deploy_pipeline.sh
scripts/external_apis/: device_response.json  endpoint_response.json  full_flow.py  no_entry_payload.json  pds_request.py  sds_request.py  spine_secure_proxy_html.py  spine_secure_proxy_request.py  spine_secure_proxy_structured.py  ssp_html_response.json  ssp_response.json
shared/shared/: utils.py  utils_test.py  version_data.py
shared/shared/logger/: __init__.py  caller_info.py  constants.py  context.py  formatters.py  handlers.py  http.py  lambda_context_logging_filter.py  logger.py  logger_test.py  logger_tests.py.ignore
terraform/: README.md  api_gateway.tf  cloudwatch.tf  codebuild.tf  codepipeline.tf  lambda.tf  lambda_role.tf  locals.tf  state.tf  utility-bucket.tf  variables.tf
terraform/buildspecs/: integration-tests.yml  terraform-apply.yml  terraform-plan.yml
terraform/env-config/: dev.conf  pull-request-template.conf
terraform/scripts/: package-lambdas-source-code.sh  package-shared-lambda-layer.sh
tests/integration/: behave.ini  pyproject.toml  readme.md  runner.py
tests/integration/features/: direct_care_api.feature  environment.py
tests/integration/features/steps/: direct_care_api.py
tests/integration/methods/: api_methods.py  asserter.py
