[tool.poetry]
name = "sam-demo"
version = "0.1.0"
description = ""
authors = ["me"]
license = "???"

[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
boto3 = "^1.26.89"
boto3-stubs = "^1.26.89"
types-requests = "^2.28.11.15"
mypy = "^1.1.1"
black = "^23.1.0"
cfn-lint = "^0.74.1"
pydantic = "^1.10.6"
aws-sam-translator = "^1.61.0"
pytest-cov = "^4.0.0"
flake8 = "^6.0.0"
awsume = "^4.5.3"
platformdirs = "^3.1.1"

[build-system]
requires = ["poetry>=1.1"]
build-backend = "poetry.masonry.api"


[tool.poetry.dependencies]
python = "^3.9"
nhs-number = "^1.2.1"
dpath = "^2.1.4"
requests = "^2.28.2"
pyjwt = "^2.6.0"

[tool.pytest.ini_options]
pythonpath = [
  "lambdas/main",
  "lambdas/add",
  "lambdas/multiply",
  "lambdas/power",
  "lambdas/shared",
  "lambdas/pds",
]

[tool.pylint.main]
ignore-paths = [
    '.*/?\.venv/.*',
    '.*/?\.git/.*',
    '.aws-sam/.*',
    '.pytest_cache/.*',
]
py-version = "3.9"
recursive = true

[tool.pylint.basic]
good-names = [
    "_",
]

[tool.pylint.messages_control]
max-line-length = 120
max-module-lines = 1000
max-public-methods = 25
max-args = 8
min-similarity-lines = 30
max-returns = 10
max-branches = 15
max-attributes = 15
disable = [
    "fixme",
    "missing-class-docstring",
    "missing-module-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "duplicate-code"
]

[tool.mypy]
python_version = "3.9"
warn_return_any = false
warn_unused_configs = true
show_error_codes = true
exclude = [
    "lambdas/shared/.*",
]
# ignore_missing_imports = true
mypy_path = "lambdas"

[tool.isort]
profile = "black"
known_third_party = []
