[tool.poetry]
name = "direct-care-api-integration-tests"
version = "0.1.0"
description = "Automated Integration tests for the Direct Care API"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.28.2"
behave = "^1.2.6"
assertpy = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
